<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_board_msg"
            android:textSize="40sp"
            android:fontFamily="@font/cantarell_bolditalic"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/tv_subtitle"/>

        <TextView
            android:id="@+id/tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_budget_msg"
            android:textSize="30sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_above="@id/progressBarBudget"/>

        <ProgressBar
            android:id="@+id/progressBarBudget"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginBottom="50dp" />

        <TextView
            android:id="@+id/tv_nutrition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_nutrition_msg"
            android:textSize="30sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_above="@id/progressBarNutrition"/>

        <ProgressBar
            android:id="@+id/progressBarNutrition"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginBottom="50dp"
            />






    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>